app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: securevault-service
spec:
  type: NodePort
  selector:
    app: securevault
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30007
